fixed table respacing on expanding collapse

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,3 +88,7 @@
 .input-form {
     margin: 50px;
 }
+
+.table {
+    table-layout: fixed !important;
+}
